search fixes, overlapping thing

--- a/eaton.frontend/src/shared/module-faceted-navigation/css/_faceted-nav-header.scss
+++ b/eaton.frontend/src/shared/module-faceted-navigation/css/_faceted-nav-header.scss
@@ -36,6 +36,7 @@
       color:#005EB8;
       outline:none;
       margin-left:12px;
+      font-size: 18px;
     }
     .styledDropdown a:hover {
       text-decoration: underline;
